# neofox

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yml  CNAME  Dockerfile  FeatureLiterature.py  INSTALL.md  MANIFEST.in  README.md  epitope.py  gpl-v3.tmpl  predict_all_epitopes.py  pyproject.toml  requirements.txt  setup.py  start_annotation_multiple_patientfiles.sh  start_annotation_multiple_patientfiles_one_input_folder.sh  tox.ini
IEDB_Immunogenicity/: predict_immunogenicity_simple.py
MixMHCpred/: mixmhc2pred.py  mixmhcpred.py
Tcell_predictor/: prediction.py  tcellpredictor_wrapper.py
aa_index/: aaindex.doc
dissimilarity_garnish/: dissimilarity.py
docs/: Biological_data_modelling.pptx  README.md  neofox_model.drawio  requirements.txt
helpers/: data_import.py
input/: FeatureLiterature.py  __init__.py  command_line.py  epitope.py  epitope_annotator.py  epitopeannotator.py  exceptions.py  immunogenicity_neoantigen_prediction.py  predict_all_epitopes.py  references.py
model/: neoepitope.avdl
neoag/: neoag_gbm_model.py
neoantigen_fitness/: Aligner_modified.py  NSCLC.fa  neoantigen_fitness.py
neofox/: __init__.py  annotator.py  command_line.py  epitope_annotator.py  exceptions.py  expression_imputation.py  neofox.py  neofox_epitope.py
netmhcIIpan/: combine_netmhcIIpan_pred_multiple_binders.py  netmhcIIpan_prediction.py
netmhcpan4/: MHC_available.csv  combine_netmhcpan_pred_multiple_binders.py  multiple_binders.py  netmhcpan_prediction.py  tmp.fasta
new_features/: amino_acid_frequency_scores.py  conservation_scores.py
(+609 files in other folders)
