[tool.poetry]
name = "neofox"
version = "1.2.2"
description = "NEOantigen Feature tOolboX"
authors = [
    "TRON - Translational Oncology at the University Medical Center", 
    "of the Johannes Gutenberg University Mainz - ",
    "Computational Medicine group ",
    "<franziska.lang@tron-mainz.de>"
]
license = "GPLv3"
readme = "README.md"
packages = [
    {include = "neofox"}
]

# main dependency group
[tool.poetry.dependencies]
python = "~3.11"
biopython = ">1.80"
mock = "~4.0.3"
pandas = ">=2.1,<2.3"
numpy = ">=1.24,<1.27"
scipy = ">=1.10.0"
logzero = ">=1.5.0"
python-dotenv = "~0.12.0"
betterproto = "~1.2.5"
pysam = ">0.20"
dask = ">=2024.0.0,<=2024.6.2"
distributed = ">=2024.0.0,<=2024.6.2"
faker = "~13.13.0"
xmltodict = "~0.12.0"
cython = ">3"

#[tool.poetry.group.doc]
#optional = true
#
#[tool.poetry.group.doc.dependencies]
#Sphinx = "*"#">6.0.0,<=7.1.2"
#docutils = "*"#"~0.20.1"
#m2r2 = "0.3.3"#">0.3.0"
#nbsphinx = "*"#">0.8.0"
#pydata-sphinx-theme = "*"
#pandoc = "*"

[tool.poetry.scripts]
neofox = "neofox.command_line:neofox_cli"
neofox-epitope = "neofox.command_line:neofox_epitope_cli"
neofox-configure = "neofox.command_line:neofox_configure"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
